--- a/app/views/itineraries/_form.html.erb
+++ b/app/views/itineraries/_form.html.erb
@@ -6,7 +6,9 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :content %>
-    <%= f.association :trip %>
+    <%# f.association :trip %>
+    <%# the below input value will either be @itinerary.trip_id or params in url %>
+    <%= f.input :trip_id, input_html: {value: @itinerary.trip_id || params[:trip_id]}, as: :hidden %>
   </div>
 
   <div class="form-actions">
