add rich text area for itinerary content and breadcrumbs for itinerary show page

--- a/app/views/itineraries/_form.html.erb
+++ b/app/views/itineraries/_form.html.erb
@@ -5,7 +5,10 @@
 
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.input :content %>
+    <%# f.input :content %>
+    <%# add rich text area view for itinerary form %>
+    <%= f.label :content %>  
+    <%= f.rich_text_area :content %>
     <%# f.association :trip %>
     <%# the below input value will either be @itinerary.trip_id or params in url %>
     <%= f.input :trip_id, input_html: {value: @itinerary.trip_id || params[:trip_id]}, as: :hidden %>
