--- a/app/views/itineraries/_itinerary.html.erb
+++ b/app/views/itineraries/_itinerary.html.erb
@@ -17,7 +17,7 @@
 
     <%# buttons for card footer  %>
     <div class="card-footer">
-    <%= link_to 'Edit', edit_trip_path(itinerary), class: 'btn btn-sm btn-warning' %>
+    <%= link_to 'Edit', edit_itinerary_path(itinerary), class: 'btn btn-sm btn-warning' %>
     <%= link_to 'Destroy', itinerary, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
     </div>
 
