--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -1,5 +1,18 @@
-<p id="notice"><%= notice %></p>
+<div class="container mt-3">
+<%# the below links will show more logic in front end like: Travel Plans\trip\itinerary %>
+
+    <%= link_to 'Travel Plans', trips_path %>
+\
+    <%# icon + boostrap color %>
+    <i class="fa-solid fa-map-location-dot text-info"></i>
+    <%= link_to @itinerary.trip.title, trip_path(@itinerary.trip) %> 
+\
+    <i class="fa-solid fa-sun text-warning"></i>
+    <%= link_to @itinerary.title, itinerary_path(@itinerary) %>
+    <p></p>
 
 <%= render 'itineraries/itinerary', itinerary: @itinerary %>
 
 <%= link_to 'Back to trip', trip_path(@itinerary.trip) %>
+
+</div>
