changed routes for trip and itinerary, do some research and successfully make nested resources, now the new resources routes is itinerary in trip

--- a/app/views/itineraries/_form.html.erb
+++ b/app/views/itineraries/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= simple_form_for(@itinerary) do |f| %>
+<%= simple_form_for([@trip, @itinerary]) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
@@ -11,7 +11,7 @@
     <%= f.rich_text_area :content %>
     <%# f.association :trip %>
     <%# the below input value will either be @itinerary.trip_id or params in url %>
-    <%= f.input :trip_id, input_html: {value: @itinerary.trip_id || params[:trip_id]}, as: :hidden %>
+    <%# f.input :trip_id, input_html: {value: @itinerary.trip_id || params[:trip_id]}, as: :hidden %>
   </div>
 
   <div class="form-actions">
