--- a/app/views/itineraries/_itinerary.html.erb
+++ b/app/views/itineraries/_itinerary.html.erb
@@ -6,7 +6,7 @@
      <%# each itinerary title is card header  %>
     <div class="card-header">
       <div class="fa-solid fa-bus"></div>
-        <%= link_to itinerary.title, itinerary %>
+        <%= link_to itinerary.title, trip_itinerary_path(@trip, itinerary) %>
     </div>
 
     <%# each itinerary content is card body  %>
@@ -21,8 +21,9 @@
     <%# users authorization check %>
      <% if policy(itinerary).edit? %>
     <div class="card-footer">
-    <%= link_to 'Edit', edit_itinerary_path(itinerary), class: 'btn btn-sm btn-warning' %>
-    <%= link_to 'Destroy', itinerary, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+    <%# below routes is also nested path %>
+    <%= link_to 'Edit', edit_trip_itinerary_path(@trip, itinerary), class: 'btn btn-sm btn-warning' %>
+    <%= link_to 'Destroy', [@trip, itinerary], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
     </div>
     <% end %>
 </div>
