change itinerary edit and new views, just like trip views

--- a/app/views/itineraries/_form.html.erb
+++ b/app/views/itineraries/_form.html.erb
@@ -16,7 +16,7 @@
     <%# f.input :trip_id, input_html: {value: @itinerary.trip_id || params[:trip_id]}, as: :hidden %>
   </div>
 
-  <div class="form-actions">
+  <div class="form-actions mt-3">
     <%= f.button :submit %>
   </div>
 <% end %>
