--- a/app/views/itineraries/new.html.erb
+++ b/app/views/itineraries/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New Itinerary</h1>
+<%# minor styling just like trips new view %>
+<div class="card mt-3">
 
-<%= render 'form', itinerary: @itinerary %>
+  <div class="card-header">
+    <h1>New Itinerary</h1>
+  </div>
 
-<%= link_to 'Back', trip_path(@trip) %>
+  <div class="card-body"> 
+    <%= render 'form', itinerary: @itinerary %>
+  </div>
+
+  <div class="card-footer">
+    <%= link_to 'Back to trip', trip_path(@trip) %>
+  </div>
+
+</div>
