--- a/app/views/itineraries/edit.html.erb
+++ b/app/views/itineraries/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Itinerary</h1>
-
-<%= render 'form', itinerary: @itinerary %>
-
-<%= link_to 'Show Itinerary', trip_itinerary_path(@trip, @itinerary)%> |
-<%= link_to 'Back to trip', trip_path(@itinerary.trip) %>
+<%# minor styling just like trips edit view %>
+<div class="card mt-3">
+  <div class="card-header">
+    <h1>Editing Itinerary</h1>
+  </div>
+  
+  <div class="card-body">
+    <%= render 'form', itinerary: @itinerary %>
+  </div>
+  <div class="card-footer">
+    <%= link_to 'Show Itinerary', trip_itinerary_path(@trip, @itinerary)%>  |
+    <%# I add below path in case when user in edit page, click back button will not go to listing page, I want them can go to the exactly trip page %>
+    <%= link_to 'Back to trip', trip_path(@itinerary.trip) %>
+  </div>
