--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -17,7 +17,7 @@
         <div class="col-lg-6"> 
         <%# the below front end view is add itinerary can click, after click, the url link nested route  %>
         <%# trip_itinerary_path(@trip,@itinerary) => localhost:3000/trips/trip.id/itinerary/itinerary.id %>
-        <%= link_to 'Add Itinerary', new_trip_itinerary_path(@trip, @itinerary) %>
+        <%= link_to 'Add New Itinerary', new_trip_itinerary_path(@trip, @itinerary), class: 'btn btn-success btn-sm btn-block mb-3' %>
 
         <%# render partial page itinerary for exactly trip %>
         <% @itineraries.each do |itinerary|%>
