--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,7 +1,10 @@
 
 <div class="card mt-3">
   <div class="card-header">
-    <h1>Editing Trip</h1>
+    <h1>
+      <i class="fa-solid fa-pen-to-square"></i>
+      Editing Trip
+    </h1>
   </div>
   
   <div class="card-body">
