--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -2,7 +2,10 @@
 <div class="card mt-3">
 
   <div class="card-header">
-    <h1>New Trip</h1>
+    <h1>
+      <i class="fa-solid fa-cart-flatbed-suitcase"></i>
+      New Trip
+    </h1>
   </div>
 
   <div class="card-body"> 
