try to use gem pagy to set pages links, but its bootstrap link cannot be used in my app, try to fix the issue, no suitable answer, I have to choose the basicpage link and overwrite the css style, and it is ok for using

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,12 @@
         text-decoration: none;
      }
  }
+
+ .pagy-nav{
+     span {
+         padding: 10px;
+     }
+     display: flex;
+     justify-content: center;
+     align-items: center;
+ }
