--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,3 +1,7 @@
+<%# dynamic title for home page => home page title should like Travel-Fun/username-Profile%> 
+<% content_for :title do %>
+  Travel Fun|Adventure Explore
+<% end %>
 
 <%# bootstrap jumbotron format %>
 <div class="jumbotron mt-3">
