--- a/app/views/static_pages/track_activities.html.erb
+++ b/app/views/static_pages/track_activities.html.erb
@@ -1,3 +1,8 @@
+<%# dynamic title for Operation History page => Operation History page title should like Travel-Fun|Operation%> 
+<% content_for :title do %>
+  Travel Fun|Operation
+<% end %>
+
 <%# this view for static_pages controller track activities actions %>
 <h3>
   <div class="text-center mt-3">
