--- a/app/views/itineraries/edit.html.erb
+++ b/app/views/itineraries/edit.html.erb
@@ -1,3 +1,8 @@
+<%# dynamic title for itinerary edit page => itinerary edit page title%> 
+<% content_for :title do %>
+  Travel Fun/Trip <%= @trip.title %>/Editing itinerary <%= @itinerary.title%>
+<% end %>
+
 <div class="mt-3">
 <%# the below links will show more logic in front end like: Travel Plans\trip\itinerary %>
     <%= link_to 'Travel Plans', trips_path %>
