--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,3 +1,8 @@
+<%# dynamic title for trip show page => trips show page title should like Travel-Fun/All Trips%> 
+<% content_for :title do %>
+  Travel Fun/All Trips
+<% end %>
+
 <p id="notice"><%= notice %></p>
 
 <%# update trips listing layout below %>
