--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,3 +1,8 @@
+<%# dynamic title for trip new page => trips new page title should like Travel Fun/New Trip%> 
+<% content_for :title do %>
+  Travel Fun/New Trip
+<% end %>
+
 <%# bootstrap format for new page %>
 <div class="card mt-3">
 
