create Orders MVC and relates it to users and trips table, and base on trips and users view to update order views as well

--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -1,4 +1,4 @@
-<%# dynamic title for trip edit page => trips edit page title should like Travel Fun/Editing xxx%> 
+<%# dynamic title for itinerary show page => itinerary show page title%> 
 <% content_for :title do %>
   Travel Fun/Trip <%= @trip.title %>/Itinerary <%= @itinerary.title%>
 <% end %>
