--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -7,18 +7,25 @@
 <div class="card mt-3">
 
   <div class="card-header">
-    <h1>
-      <i class="fa-solid fa-bag-shopping"></i>
-      New Order
-    </h1>
+    <h3>
+      <i class="fa-solid fa-gift"></i>
+      <%= link_to @trip.title, trip_path(@trip) %>
+    </h3>
+    <hr/>
+    <h3>
+    <i class="fa-solid fa-bag-shopping"></i>
+      Purchase Trip
+    </h3>
   </div>
 
   <div class="card-body"> 
-    <%= render 'form', order: @order %>
+    <%= form_tag trip_orders_path(@trip) do %>
+        <%= submit_tag "Buy for #{@trip.price}", class: "btn btn-lg btn-success"%>
+    <% end %>
   </div>
 
   <div class="card-footer">
-    <%= link_to 'Back', orders_path %>
+    <%= link_to 'Back', trip_path(@trip) %>
   </div>
 
 </div>
