--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -6,8 +6,8 @@
 <div class="card mt-3">
   <div class="card-header">
     <h1>
-      <i class="fa-solid fa-basket-shopping"></i> 
-      Editing Order
+      <i class="fa-solid fa-highlighter text-info"></i>
+      Write a Review
     </h1>
   </div>
   
@@ -15,7 +15,7 @@
     <%= render 'form', order: @order %>
   </div>
   <div class="card-footer">
-    <%= link_to 'Show', @order %> |
+    <%= link_to 'Show Review', @order %> |
     <%# I add below path in case when user in edit page, click back button will not go to Order listing page, I want them can go to the exactly order page %>
-    <%= link_to 'Back', order_path(params[:id]) %>
+    <%= link_to 'Back to Order', orders_path(@orders) %>
   </div>
