--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,29 +1,3 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Trip:</strong>
-  <%= @order.trip.title%>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @order.user.email %>
-</p>
-
-<p>
-  <strong>Rating:</strong>
-  <%= @order.rating %>
-</p>
-
-<p>
-  <strong>Review:</strong>
-  <%= @order.review %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @order.price %>
-</p>
-
-<%= link_to 'Edit', edit_order_path(@order) %> |
-<%= link_to 'Back', orders_path %>
+<%# render order partial %>
+<%= render 'orders/order', order: @order%> 
