--- a/app/views/trips/_trip.html.erb
+++ b/app/views/trips/_trip.html.erb
@@ -36,6 +36,9 @@
       <div class="fa-solid fa-magnifying-glass-dollar"></div> 
       <%# trip_helper method %>
       <%= order_button(trip)%>
+      <div class="row"></div>
+      <div class="fa-solid fa-pen-to-square"></div>
+      <%= review_button(trip)%>
     </div>
 
 
