--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -55,11 +55,13 @@
         <%= render 'trips/trip', trip: trip %>
       <% end %>
     </div>
-    <%# bootstrap pagy render the navigation links is doesn't work, will have error so I have to choose the basic pagy render link and overwrite the style  %>
-    <div class="pagy_nav"> <%== pagy_nav(@pagy) %> </div>
+   
   </div>
-  
+   <%# bootstrap pagy render the navigation links is doesn't work, will have error so I have to choose the basic pagy render link and overwrite the style  %>
+    <%# found the bug and bootstrap pagy is work again %>
+  <div class="mx-auto" style="width: 200px;"> <%== pagy_bootstrap_nav(@pagy) %> </div>
 </div>
+
 <br/>
 
 
