--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -14,8 +14,10 @@
 </h3>
 
 <%# front end view cooperate with gem ransack users controller %>
+<%# below function is kind of like a part of company management system, admin and operator can do search for users %>
 <div class="form-inline mt-4">
   <%= search_form_for @q do |f| %>
+    <%= f.search_field :user_email_cont, placeholder: "users search" %>
     <%= f.search_field :review_cont, placeholder: "reviews search" %>
     <%= f.search_field :rating_eq, placeholder: "ratings search" %>
     <%= f.submit "Search", class: "btn btn-sm btn-info" %>
