update some comments for navbar partial view page

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -35,13 +35,13 @@
             New Trip
            end 
         </li> %>
-        <%# lind to Order page %>
-        <li class="<%= 'active font-weight-bold' if current_page?(orders_path) %> nav-item">
-          <%= link_to orders_path, class: 'nav-link' do %>
+        <%# lind to Order page,update this link to below base on users role %>
+        <%# <li class=" 'active font-weight-bold' if current_page?(orders_path)  nav-item">
+           link_to orders_path, class: 'nav-link' do 
             <div class="fa-solid fa-cart-shopping"></div>
            Orders
-          <% end %>
-        </li>
+           end 
+        </li> %>
       <%# Search Bar Start %>
       <%# after use ransack gem, I set a method on application controller, we can use that globel vaeiable to set nav bar search %>
       <div class="form-inline my-2 my-lg-0">
