--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -107,18 +107,39 @@
               <i class="fa-solid fa-folder-plus"></i>
               <b> New Trip </b>
             <% end %>
+
+            <%= link_to designed_trips_path, class: "dropdown-item" do %>
+              <i class="fa-solid fa-road"></i>
+              <b> Travel Plans </b>
+            <% end %>
+
+            <%= link_to my_clients_orders_path, class: "dropdown-item" do %>
+              <i class="fa-solid fa-user-astronaut"></i>
+              <b> My Clients </b>
+            <% end %>
           </div>
         </li>
       <% end %>
 
-      <%# if user is Operator dropdown %>
+      <%# if user is Client dropdown %>
       <% if current_user.has_role?(:client) %>
         <li class="nav-item dropdown">
           <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="navbarDropdown" role="button">
             <div class="fa-solid fa-paper-plane"></div>
             <b>Travel Plan</b>
           </a>
-          
+          <%# link to brought_trips_path and pending_review_path %>
+           <div aria-labelledby="operatorDropdown" class="dropdown-menu dropdown-menu-right">
+            <%= link_to brought_trips_path, class: "dropdown-item" do %>
+              <i class="fa-solid fa-basket-shopping"></i>
+              <b> Brought Trips </b>
+            <% end %>
+
+            <%= link_to pending_review_trips_path, class: "dropdown-item" do %>
+              <i class="fa-solid fa-wand-magic-sparkles"></i>
+              <b> Pending Review </b>
+            <% end %>
+          </div>
         </li>
       <% end %>
 
