add another migration for trips average rating, also crate update rating method, passed some examples tests

--- a/app/views/trips/_trip.html.erb
+++ b/app/views/trips/_trip.html.erb
@@ -27,6 +27,11 @@
           <%= trip.itineraries.count %> - Days
       <% end %>
     </div>
+    <%# front end view for average_rating %>
+    <div class="card-footer">
+      <i class="text-danger fa-solid fa-heart"></i>
+      <%= trip.average_rating%>
+    </div>
 
     <div class="card-footer ">
       <div class="row"></div>
